fix on border gap removal

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ nav ul li {
     padding: 10px 10px;
     border: 1px lightgray solid;
     border-right: none;
-    transform: translate(1px);
+    margin-right: -1px;
 }
 
 .login-buttons {
